# cpp-project-template

./: .gitignore  .gitmodules  CMakeLists.txt
include/: test_class.hpp
src/: main.cpp
